# storage-app/docs/swagger.yaml
@@ -5,13 +5,11 @@ definitions:
     - 1
     - 2
     - 3
-    - 4
     type: integer
     x-enum-varnames:
     - ViewPermission
     - CommentPermission
     - EditPermission
-    - OwnerPermission
   enums.MimeType:
     enum:
     - image/jpeg
@@ -267,6 +265,8 @@ definitions:
         type: string
       parent_folder_id:
         type: string
+      permission_type:
+        $ref: '#/definitions/enums.FilePermissionType'
       permissions:
         items:
           $ref: '#/definitions/presenters.PermissionOfFileOuput'
@@ -295,6 +295,8 @@ definitions:
         $ref: '#/definitions/enums.MimeType'
       expiry:
         type: integer
+      file_name:
+        type: string
       method:
         type: string
       url:
@@ -344,6 +346,23 @@ definitions:
         items:
           $ref: '#/definitions/presenters.TagOutput'
         type: array
+    type: object
+  presenters.GetSubFileOfFolderInput:
+    properties:
+      id:
+        type: string
+      is_asc:
+        type: boolean
+      is_folder:
+        type: boolean
+      limit:
+        type: integer
+      mime_type:
+        type: string
+      offset:
+        type: integer
+      sort_by:
+        type: string
     type: object
   presenters.PermissionOfFileOuput:
     properties:
@@ -570,67 +589,6 @@ paths:
               type: object
       tags:
       - auth
-  /files:
-    get:
-      consumes:
-      - application/json
-      description: Find file of user
-      parameters:
-      - description: file is in other folder, if null fetch all file
-        in: query
-        name: is_in_folder
-        type: boolean
-      - description: file is folder or not, if null fetch all file and folder
-        in: query
-        name: is_folder
-        type: boolean
-      - description: 'sort field, allow short field: created_at, updated_at, opened_at'
-        in: query
-        name: sort_by
-        required: true
-        type: string
-      - description: sort direction
-        in: query
-        name: is_asc
-        required: true
-        type: boolean
-      - description: for pagination
-        in: query
-        name: offset
-        required: true
-        type: integer
-      - description: for pagination
-        in: query
-        name: limit
-        required: true
-        type: integer
-      - description: mime type of file, if is_folder is true not pass mime_type
-        in: query
-        name: mime_type
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: Find file of user sucess
-          schema:
-            allOf:
-            - $ref: '#/definitions/response.AppResponse'
-            - properties:
-                data:
-                  $ref: '#/definitions/presenters.FindFileOfUserOuput'
-              type: object
-        "400":
-          description: Un allow sort field, lack of query
-          schema:
-            allOf:
-            - $ref: '#/definitions/response.AppResponse'
-            - properties:
-                data:
-                  type: object
-              type: object
-      tags:
-      - files
   /files/:id/download-url:
     get:
       consumes:
@@ -801,6 +759,67 @@ paths:
               type: object
       tags:
       - files
+  /files/:id/sub-file:
+    get:
+      consumes:
+      - application/json
+      description: Find file of user
+      parameters:
+      - description: file is folder or not, if null fetch all file and folder
+        in: query
+        name: is_folder
+        type: boolean
+      - description: 'sort field, allow short field: created_at, updated_at, opened_at'
+        in: query
+        name: sort_by
+        required: true
+        type: string
+      - description: sort direction
+        in: query
+        name: is_asc
+        required: true
+        type: boolean
+      - description: for pagination
+        in: query
+        name: offset
+        required: true
+        type: integer
+      - description: for pagination
+        in: query
+        name: limit
+        required: true
+        type: integer
+      - description: mime type of file, if is_folder is true not pass mime_type
+        in: query
+        name: mime_type
+        type: string
+      - description: file id
+        in: path
+        name: id
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Find file of user sucess
+          schema:
+            allOf:
+            - $ref: '#/definitions/response.AppResponse'
+            - properties:
+                data:
+                  $ref: '#/definitions/presenters.GetSubFileOfFolderInput'
+              type: object
+        "400":
+          description: Unallow sort field, lack of query
+          schema:
+            allOf:
+            - $ref: '#/definitions/response.AppResponse'
+            - properties:
+                data:
+                  type: object
+              type: object
+      tags:
+      - files
   /files/:id/tags:
     get:
       consumes:
@@ -932,6 +951,67 @@ paths:
               type: object
         "404":
           description: Parent folder not found, Tag of file not found
+          schema:
+            allOf:
+            - $ref: '#/definitions/response.AppResponse'
+            - properties:
+                data:
+                  type: object
+              type: object
+      tags:
+      - files
+  /files/my-drive:
+    get:
+      consumes:
+      - application/json
+      description: Find file of user
+      parameters:
+      - description: file is in other folder, if null fetch all file
+        in: query
+        name: is_in_folder
+        type: boolean
+      - description: file is folder or not, if null fetch all file and folder
+        in: query
+        name: is_folder
+        type: boolean
+      - description: 'sort field, allow short field: created_at, updated_at, opened_at'
+        in: query
+        name: sort_by
+        required: true
+        type: string
+      - description: sort direction
+        in: query
+        name: is_asc
+        required: true
+        type: boolean
+      - description: for pagination
+        in: query
+        name: offset
+        required: true
+        type: integer
+      - description: for pagination
+        in: query
+        name: limit
+        required: true
+        type: integer
+      - description: mime type of file, if is_folder is true not pass mime_type
+        in: query
+        name: mime_type
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Find file of user sucess
+          schema:
+            allOf:
+            - $ref: '#/definitions/response.AppResponse'
+            - properties:
+                data:
+                  $ref: '#/definitions/presenters.FindFileOfUserOuput'
+              type: object
+        "400":
+          description: Un allow sort field, lack of query
           schema:
             allOf:
             - $ref: '#/definitions/response.AppResponse'
